<resources>
    <string name="app_name">OnLineShoping</string>

    <string name="main_home">首页</string>
    <string name="main_store">便利商店</string>
    <string name="main_rebate">返利商城</string>
    <string name="main_integral">积分缴费</string>
    <string name="main_mine">我的</string>
    <string name="store_hint">请输入门店名称</string>
    <string name="back">返回</string>
    <string name="search_before">历史搜索</string>
    <string name="search_recommend">热门推荐</string>
    <string name="cart_select">已选商品</string>
    <string name="cart_clear">清空</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_choose_address">选择收货地址</string>
    <string name="title_edit_address">编辑收货地址</string>
    <string name="title_add_address">编辑收货地址</string>
    <string name="delivery_merchant">商家配送</string>
    <string name="delivery_personal">用户自提</string>
    <string name="delivery_null">选择收货地址</string>
    <string name="delivery_to">订单配送至</string>
    <string name="delivery_address">提货地址</string>
    <string name="delivery_shipper">提货人</string>
    <string name="delivery_shipper_hint">请输入人姓名</string>
    <string name="delivery_tel">预留电话</string>
    <string name="delivery_tel_hint">请输入号码</string>
    <string name="delivery_fee">配送费</string>
    <string name="delivery_remark">订单备注</string>
    <string name="delivery_remark_hint">请输入备注</string>
    <string name="submit">提交订单</string>
    <string name="tile_eidt">编辑</string>
    <string name="title_cart">购物车</string>
    <string name="cart_warn">购物车会保留30天</string>
    <string name="member_discount">已享受会员优惠,优惠</string>
    <string name="cart_add">加入购物车</string>
    <string name="empty_address">您还没有收货地址~\n点击下方新建地址</string>
    <string name="add_address">+添加收货地址</string>
    <string name="address_hint">请输入地址</string>
    <string name="address_remove">删除地址</string>
    <string name="success_title">订单完成</string>
    <string name="success_money1">成功付款%1$s,已优惠%2$s</string>
    <string name="success_money2">请您等待收货</string>
    <string name="success_order_retry">重新下单</string>
    <string name="order_title">我的订单</string>
</resources>
