<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_store" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_rebate" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_integral" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_mine" />
</menu>
